--- a/Challenges/Day_10/style.css
+++ b/Challenges/Day_10/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: #2E0C0A;
+  background: #21eb0a;
   display: flex;
   align-items: center;
   justify-content: center;
