--- a/Challenges/Day_26/style.css
+++ b/Challenges/Day_26/style.css
@@ -11,7 +11,7 @@ body {
 	width: 100px;
 	height: 100px;
   margin-right: 20px;
-	background-color: #c9142c;
+	background-color: #13ca69;
 	border-radius: 50px;
 	animation: loading 2s linear infinite;
 }
